# project1_vysotskiy_anton_m25-555

./: .gitignore  Makefile  README.md  pyproject.toml
labyrinth_game/: constants.py  main.py  main_001.py  player_actions.py  utils.py
